tests/valid/escaping.workflow
action "a" {
	uses="./x \" y \\ z"
}

# ASSERT {
#   "result":       "success",
#   "numActions":   1,
#   "numWorkflows": 0
# }
